5.4.3
[add] mpeg-dash support for live content (requires inputstream.adaptive >= 2.0.12)
[fix/upd] auto subtitles to include auto-generated
[fix/upd] add My Subscriptions (Filtered) to dual login requirements
[upd] Greek strings [Twilight0]

5.4.2
[fix/upd] My Subscriptions

5.4.1
[fix/upd] dash working for vevo/etc
[upd] rework of auto subtitles
[fix] leia nightly login issues
[fix] 403 error on 'My Channel'/uploaded videos

5.4.0
[upd] Greek strings [Twilight0]
[upd] Polish strings [Etharr]
[upd] Finnish strings [teemue]
[upd] Spanish strings [roliverosc]
[fix/upd] resolve "Error Contents: 'q'" error [horstepipe]
[fix/upd] resolve Play All/Play from here not starting playback
[fix/upd] resolve playlists starting on second item
[fix/upd] allow dash in quality choices
[fix/upd] set content to files for menus, resolves mouse/scrolling
[fix/upd] fix cipher
[fix/upd] increase search history limit to 200
[fix/upd] storage db
[add] Safe Search to Settings -> General
[add] Thumbnail size to Settings -> General
[add] Auto-play suggested [mehdilauters]
[add] Automatic subtitles [Uukrull]
[add] My Subscriptions (Filtered) - whitelist/blacklist version of My Subscriptions [chhe]
[add] module extension point:
        add-ons can now add plugin.video.youtube dependency and resolve youtube video id's or make v3 api requests using the youtube plugin,
        """ <addon.xml>
        <import addon="plugin.video.youtube"/>
        """
        """ <example.py>
        import youtube_resolver
        streams = youtube_resolver.resolve(<video_id>)
        import youtube_requests
        videos = youtube_requests.get_videos([<video_id_1>, <video_id_2>, <video_id_3>])
        """

5.3.11
[fix/upd] replace custom simple_requests with script.module.requests to resolve ssl and cross-platform issues
[add] 'Reset access manager' added to Maintenance section, sign out process(available when logged out)  to clean up tokens in settings.xml